# Open-Creator

./: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
backend/: fly.toml  pyproject.toml  token.json
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  gallery.py  projects.py
backend/app/static/admin/: index.html
backend/scripts/: create_admin.py  parse_token.py  test_admin.py  test_db.py
src/: App.tsx  env.d.ts  index.css
src/components/: BackgroundReel.tsx  CustomCursor.tsx  ErrorBoundary.tsx  Footer.tsx  GalleryItem.tsx  GallerySection.tsx  Hero.tsx  Navbar.tsx  ParticleEffect.tsx  ProjectCard.tsx  ProjectsSection.tsx
src/components/canvas/: Canvas.tsx  ImageItem.tsx  Note.tsx  VideoItem.tsx
src/components/language/: LanguageMenu.tsx  LanguageSwitcher.tsx
src/components/ui/: Backdrop.tsx
src/contexts/: AuthContext.tsx  LanguageContext.tsx
src/pages/: LoginPage.tsx
src/services/: gemini.ts
src/types/: components.ts  language.ts
